[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/bg_castle.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/btn_playPress.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/ui_bar1.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/btn_play.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/btn_optionPress.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/btn_option.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/btn_quit.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/btn_quitPress.png" type="Texture" id=8]
[ext_resource path="res://scenes/mainMenu.gd" type="Script" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_castle" parent="." instance=ExtResource( 1 )]

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 88.0
margin_top = 8.0
margin_right = 768.0
margin_bottom = 1011.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_play" type="TextureButton" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -341.5
margin_right = 212.0
margin_bottom = -181.5
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_setting" type="TextureButton" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -141.5
margin_right = 212.0
margin_bottom = 18.5
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_quit" type="TextureButton" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = 146.5
margin_right = 212.0
margin_bottom = 306.5
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="TextureRect/btn_play" to="." method="_on_btn_play_button_up"]
[connection signal="button_up" from="TextureRect/btn_setting" to="." method="_on_btn_setting_button_up"]
[connection signal="button_up" from="TextureRect/btn_quit" to="." method="_on_btn_quit_button_up"]
